--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>edu.iit.sat.itmd4515.mshah73.mp2</groupId>
-    <artifactId>mshah73-mp2</artifactId>
+    <groupId>edu.iit.sat.itmd4515.malinkil.mp2</groupId>
+    <artifactId>malinkil-mp2</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>mshah73-mp2</name>
+    <name>malinkil-mp2</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
